[gd_scene load_steps=3 format=2]

[ext_resource path="res://rythm_game/NoteTarget.tscn" type="PackedScene" id=1]
[ext_resource path="res://rythm_game/MultiNoteDrawer.gd" type="Script" id=2]

[node name="MultiNoteDrawer" type="Node2D"]
script = ExtResource( 2 )

[node name="Line2D" type="Line2D" parent="."]
z_index = -3652
z_as_relative = false
points = PoolVector2Array( 0, 0, 150.75, 0 )
default_color = Color( 0.4, 0.5, 1, 0.5 )

[node name="PositionEnd" parent="." instance=ExtResource( 1 )]

[node name="Sprite" parent="PositionEnd" index="0"]
self_modulate = Color( 0.980392, 0.0235294, 0.0235294, 0.380392 )

[node name="PositionStart" parent="." instance=ExtResource( 1 )]

[node name="Sprite" parent="PositionStart" index="0"]
self_modulate = Color( 0.980392, 0.0235294, 0.0235294, 0.380392 )
[connection signal="selected" from="PositionEnd" to="." method="_on_selected"]
[connection signal="selected" from="PositionStart" to="." method="_on_selected"]

[editable path="PositionEnd"]

[editable path="PositionStart"]
